# JNITest

./: BuildWindows.sh  CMakeLists.txt  HelloJNI.java  RunLinux.sh  TopLevelClass.java  howtorun.txt
JNIFunctions/: CMakeLists.txt  JNIFunctions.cpp  JNIFunctions.h  NativeFunctions.cpp  NativeFunctions.h
toolchains/: toolchain-mingw-win32.cmake
